--- a/src/assets/scss/_bootstrap-variable-override.scss
+++ b/src/assets/scss/_bootstrap-variable-override.scss
@@ -2,6 +2,9 @@ $font-family-base: 'Roboto';
 $body-bg: #e8e8e8;
 $body-color: #94979A;
 $primary: #2F374A;
+$secondary: $body-color;
+$success: #28a745;
+$danger: #dc3545;
 $bim-cyan: #00B5A6;
 $black: #000000;
 $white: #ffffff;
@@ -77,3 +80,8 @@ $badge-padding-x: 0.7em;
 $badge-font-size: 0.643rem;
 $badge-font-weight: normal;
 $badge-border-radius: 3px;
+
+// Modal
+$modal-inner-padding: 0;
+$modal-md: 507px;
+$modal-content-border-width: 0;
