--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -21,6 +21,7 @@
 @import "component/base-components/base-choice-list";
 @import "component/base-components/base-dropdown";
 @import "component/base-components/base-button-action";
+@import "component/base-components/base-button-icon";
 @import "component/base-components/base-card";
 @import "component/base-components/base-table-spaced";
 @import "component/base-components/base-upload-area";
