--- a/src/assets/scss/component/base-components/_base-card.scss
+++ b/src/assets/scss/component/base-components/_base-card.scss
@@ -21,6 +21,7 @@ $toolbox-background: #E6E6E6;
 .#{$base-card-name}__title-container {
   padding: 15px;
   font-size: 0.9286rem;
+  line-height: 1em;
   color: $primary;
   flex: 1 auto;
 }
