WIP. component validDelete ok

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -25,6 +25,7 @@
 @import "component/base-components/base-card";
 @import "component/base-components/base-table-spaced";
 @import "component/base-components/base-upload-area";
+@import "component/base-components/base-valid-delete";
 @import "component/base-components/base-model-preview";
 @import "component/base-components/base-input-radio";
 @import "component/base-components/base-input-text-material";
