--- a/src/assets/scss/component/dms/_dms.scss
+++ b/src/assets/scss/component/dms/_dms.scss
@@ -221,7 +221,7 @@ $width-lg-tree: 350px;
     }
 
     &__remove {
-      .delete__actions {
+      .base-valid-delete {
         .svg-icon {
           margin-right: 0;
         }
