--- a/src/assets/scss/layout/_header_user_menu.scss
+++ b/src/assets/scss/layout/_header_user_menu.scss
@@ -18,6 +18,8 @@
     font-weight: normal;
     font-size: 1rem;
     letter-spacing: 1px;
+    text-transform: uppercase;
+
     &--big {
       $pic-size: 50px;
       min-width: $pic-size;
