--- a/src/assets/scss/component/base-components/_base-button-icon.scss
+++ b/src/assets/scss/component/base-components/_base-button-icon.scss
@@ -1,8 +1,6 @@
 .base-button-icon{
   box-shadow: $bd-box-shadow;
   .svg-icon{
-    &.is-close{
-      fill: $color-text;
-    }
+    &.is-close{ fill: $color-text; }
   }
 }
