--- a/src/assets/scss/component/_users-list.scss
+++ b/src/assets/scss/component/_users-list.scss
@@ -13,34 +13,31 @@
 
   &__card {
     height: 100%;
-
-    .base-card__content {
+    .base-card__content{
       padding: 0;
     }
   }
-  &__header {
-    box-shadow: $bd-box-shadow;
+  &__header{
     padding: 3px 3px 3px 9px;
-    display: flex;
-    align-items: center;
     height: 32px;
-    transition: height ease 0.25s;
+    @include transition(height ease .25s);
 
-    &--large {
+    &--large{
       height: 50px;
+      box-shadow: $bd-box-shadow;
+      @include flexbox;
+      @include align-items(center);
     }
-
-    .base-valid-delete {
+    .base-valid-delete{
+      height: auto;
       position: relative;
       box-shadow: none;
       right: unset;
       bottom: unset;
-      transform: none;
-      height: auto;
+      @include transform(none);
     }
-
-    .svg-icon {
-      color: $primary;
+    .svg-icon{
+      color: $color-primary;
       cursor: pointer;
     }
 
@@ -53,6 +50,7 @@
         max-width: 115px;
         min-width: 115px;
         font-weight: 100;
+        @include font-size(13px);
       }
       .base-button-icon {
         max-height: 32px;
@@ -60,276 +58,264 @@
         margin-left: 8px;
       }
     }
-
-    &__right-container {
+    &__right-container{
       margin-left: auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-
-      & > span {
+      @include flexbox;
+      @include align-items(center);
+      @include justify-content(space-between);
+      & > span{
         margin-left: 10px;
       }
     }
-
-    &__search {
-      display: flex;
-      align-items: center;
+    &__search, &__invitation{
       width: 100%;
-
-      input {
-        min-width: auto;
-        width: 50%;
-        max-width: 204px;
-        border: 1px solid #F3F3F3;
+      @include flexbox;
+      @include align-items(center);
+      input{
         padding: 4px;
         max-height: 22px;
 
-        &:focus {
+        &:focus{
           outline: none;
         }
       }
     }
-    &__invitation {
-      display: flex;
-      align-items: center;
-      width: 100%;
-
-      input {
-        min-width: auto;
-        width: 100%;
-        max-width: 204px;
-        border: 1px solid #F3F3F3;
+    &__invitation{
+      input{
         padding: 7px 12px;
+        width: 100%;
+        min-width: auto;
+        max-width: 204px;
+        border: 1px solid $gray3;
 
-        &:focus {
-          outline: none;
+        &:focus{
+          width: 50%;
+          min-width: auto;
+          max-width: 204px;
+          max-height: 22px;
+          border: 1px solid $gray3;
         }
       }
-
-      &__actions {
-        text-align: right;
+      &__actions{
         margin-left: auto;
         max-width: 20%;
-        display: flex;
-        align-items: center;
+        @include flexbox;
+        @include align-items(center);
 
-        .check-cross {
-          .svg-icon {
+        .check-cross{
+          .svg-icon{
             fill: $danger;
           }
         }
       }
 
-      .rights-select {
-        position: relative;
-        max-width: 125px;
-        width: 100%;
-        border: 1px solid #F3F3F3;
-        color: $primary;
-        cursor: pointer;
+      .rights-select{
+        padding: 4px 15px 4px 4px;
         margin-left: 11px;
-        display: flex;
-        align-items: center;
-        padding: 6px;
-        padding-right: 15px;
+        width: 30%;
+        height: 22px;
+        max-width: 125px;
+        position: relative;
+        border: 1px solid $gre3;
+        color: $color-primary;
+        cursor: pointer;
+        
+        @include flexbox;
+        @include align-items(center);
 
-        .arrow-down {
+        .arrow-down{
           position: absolute;
           right: 2px;
+          text-align: right;
+          @include flexbox;
+          @include align-items(center);
         }
-        .base-button-option__menu {
-          width: 167px;
-          top: 26px;
-          left: 0;
-
-          ul {
-            li {
-              padding: 5px 8px;
-            }
+        .check{
+          .svg-icon{
+            fill: #28a745;
           }
-
-          .base-input-radio {
-            margin: 0;
-            width: 100%;
+        }
+        .check-cross{
+          .svg-icon{
+            fill: #dc3545;
           }
-          label {
-            padding-left: 0;
-
-            &:before,
-            &:after {
-              display: none;
-            }
+        }
+      }
+      .base-button-option__menu{
+        width: 167px;
+        top: 26px;
+        left: 0;
+        ul{
+          li{
+            padding: 5px 8px;
+          }
+        }
+        .base-input-radio{
+          margin: 0;
+          width: 100%;
+        }
+        label{
+          padding-left: 0;
+          &:before, &:after{
+            display: none;
           }
         }
       }
     }
-    .account-plus {
-      &.clicked {
-        &:after {
+    .account-plus{
+      &.clicked{
+        &:after{
           animation-name: circle;
           animation-duration: .5s;
         }
       }
     }
   }
-  &__body {
+  &__body{
     overflow-y: auto;
   }
-  &__users {
+  &__users{
     padding: 0;
     margin: 0;
-    max-height: 397px;
     min-height: 397px;
+    max-height: 397px;
   }
-  &__user {
-    display: flex;
-    align-items: center;
+  &__user{
     padding: 16px 9px 11px 12px;
-    border-bottom: 1px solid rgba(148,151,154,0.08);
-    
-    &__picture {
+    border-bottom: 1px solid rgba($color-primary,.08);
+    @include flexbox;
+    @include align-items(center);
+    &__picture{
       position: relative;
       overflow: hidden;
-
-      .circle {
+      .circle{
         height: 38px;
         width: 38px;
         border-radius: 100%;
       }
     }
-    &__datas {
-      color: $body-color;
+    &__datas{
       margin-left: 24px;
-      font-size: 0.643rem;
+      color: $color-text;
       line-height: 0.9rem;
-
+      @include font-size(9px);
       .badge {
         margin-left: 19px;
         text-transform: capitalize;
       }
-
-      & > * {
+      & > *{
         display: inline-block;
         vertical-align: top;
       }
-
-      p {
+      p{
         margin-bottom: 0;
-
-        & > * {
+        & > *{
           display: block;
         }
       }
-
-      a {
+      a{
         text-decoration: underline;
       }
     }
-    &__name {
-      color: $primary;
-      font-size: 0.8rem;
+    &__name{
+      color: $color-primary;
+      @include font-size(12px);
     }
-    &__actions {
+    &__actions{
       margin-left: auto;
       position: relative;
       cursor: pointer;
-
-      &__menu {
-        .base-button-option__menu {
+      &__menu{
+        .base-button-option__menu{
           width: 134px;
-          font-size: 0.8rem;
+          @include font-size(12px);
 
-          @include media-breakpoint-up(sm) {
+          @include media-breakpoint-up(sm){
             width: 184px;
           }
-          @include media-breakpoint-up(lg) {
+          @include media-breakpoint-up(lg){
             width: 134px;
           }
-          @include media-breakpoint-up(xl) {
+          @include media-breakpoint-up(xl){
             width: 184px;
           }
 
-          li {
-            justify-content: flex-end;
+          li{
+            @include justify-content(flex-end);
           }
-          .svg-icon {
+          .svg-icon{
             margin-left: 10px;
           }
-          .new_folder_box {
+          .new_folder_box{
             width: 125px;
-              left: -126px;
+            left: -126px;
             top: 8px;
 
-            @include media-breakpoint-up(sm) {
+            @include media-breakpoint-up(sm){
+              width: 140px;
               left: -141px;
-            width: 140px;
             }
-            @include media-breakpoint-up(lg) {
+            @include media-breakpoint-up(lg){
               width: 125px;
               left: -126px;
             }
-            @include media-breakpoint-up(xl) {
+            @include media-breakpoint-up(xl){
+              width: 140px;
               left: -141px;
-            width: 140px;
             }
           }
-
-          &__remove {
-            .delete__actions {
-              .svg-icon {
+          &__remove{
+            .delete__actions{
+              .svg-icon{
                 margin: 0;
               }
             }
           }
         }
-
-        .arrow-left {
-          &:before {
-            content: '';
+        .arrow-left{
+          &:before{
+            margin-right: auto;
             width: 0;
             height: 0;
+            content: '';
+            border-color: transparent $primary transparent transparent;
             border-style: solid;
             border-width: 4px 4px 4px 0;
-            border-color: transparent $primary transparent transparent;
-            margin-right: auto;
           }
         }
       }
     }
-
-    &__status {
+    &__status{
+      width: 10px;
+      height: 10px;
       position: absolute;
       bottom: 0;
       right: 0;
-      height: 10px;
-      width: 10px;
-      box-sizing: border-box;
       border: 1px solid $white;
       border-radius: 100%;
-
-      &--inline {
+      box-sizing: border-box;
+      &--inline{
         background: $bim-positive;
       }
-      &--outline {
+      &--outline{
         background: $bim-negative;
       }
     }
   }
-
-  &-modal {
-    .close {
+  &-modal{
+    .close{
       position: absolute;
       right: 10px;
       top: 10px;
       z-index: 1;
     }
-
-    &__input-mail {
-      width: 100%;
-      max-width: 302px;
-      height: 32px;
+    &__input-mail{
+      margin-left: 14px;
       padding: 10px;
+      width: 100%;
+      height: 32px;
+      max-width: 302px;
+      max-width: 253px;
       border: 1px solid $border-color;
     }
   }
