--- a/src/assets/scss/component/base-components/_base-search-bar.scss
+++ b/src/assets/scss/component/base-components/_base-search-bar.scss
@@ -8,56 +8,49 @@ $search-md-size-input: $search-md-size-container - $search-btn-size;
 $search-lg-size-input: $search-lg-size-container - $search-btn-size;
 
 .search-component {
-  position: relative;
-  box-shadow: $bd-box-shadow;
   max-width: $search-size-container;
-  display: flex;
-
-  @include media-breakpoint-up(md) { 
+  position: relative;
+  box-shadow: 0 2px 10px 0 rgba($color-black,.08);
+  @include flexbox;
+  
+  @include media-breakpoint-up(md){ 
     max-width: $search-md-size-container;
   }
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(lg){
     max-width: $search-lg-size-container;
   }
-
-  .search-input {
-    width: $search-size-input;
+  .search-input{
     padding: 9px 14px;
+    width: $search-size-input;
     min-width: auto;
     border: none;
-    transition: all linear 0.25s;
+    @include transition(all linear .25s);
 
-    @include media-breakpoint-up(md) { 
+    @include media-breakpoint-up(md){ 
       width: $search-md-size-input;
     }
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(lg){
       width: $search-lg-size-input;
     }
-
-
-    &.is-close {
-      width: 0;
+    &.is-close{
       padding: 0;
+      width: 0;
     }
-
-    &::placeholder {
-      color: #E1E1E2;
+    &::placeholder{
+      color: $gray2;
       font-weight: 100;
-      font-size: 1rem;
+      @include font-size(14px);
     }
-    &:focus {
+    &:focus{
       outline: none;
     }
   }
-
-  .base-button-icon {
+  .base-button-icon{
     border-left: 1px solid $search-border-color;
-
-    .svg-icon {
-      fill: $primary;
-      
-      &.is-close {
-        fill: $body-color;
+    .svg-icon{
+      fill: $color-primary;
+      &.is-close{
+        fill: $color-text;
       }
     }
   }
