--- a/src/assets/scss/component/_users-list.scss
+++ b/src/assets/scss/component/_users-list.scss
@@ -20,6 +20,9 @@
   &__header{
     padding: 3px 3px 3px 9px;
     height: 32px;
+    box-shadow: 0 2px 10px 0 rgba($color-black, .07);
+    @include flexbox;
+    @include align-items(center);
     @include transition(height ease .25s);
 
     &--large{
@@ -116,7 +119,7 @@
         height: 22px;
         max-width: 125px;
         position: relative;
-        border: 1px solid $gre3;
+        border: 1px solid $gray3;
         color: $color-primary;
         cursor: pointer;
         
@@ -198,7 +201,6 @@
       margin-left: 24px;
       color: $color-text;
       line-height: 0.9rem;
-      @include font-size(9px);
       .badge {
         margin-left: 19px;
         text-transform: capitalize;
@@ -209,6 +211,7 @@
       }
       p{
         margin-bottom: 0;
+        @include font-size(9px);
         & > *{
           display: block;
         }
@@ -219,7 +222,7 @@
     }
     &__name{
       color: $color-primary;
-      @include font-size(12px);
+      @include font-size(11px);
     }
     &__actions{
       margin-left: auto;
