--- a/src/assets/scss/component/base-components/_base-card.scss
+++ b/src/assets/scss/component/base-components/_base-card.scss
@@ -22,7 +22,7 @@ $toolbox-background: #E6E6E6;
   padding: 15px;
   color: $color-primary;
   flex: 1 auto;
-  line-height: 1em;
+  line-height: 1rem;
   @include font-size(13px);
 }
 
