--- a/src/assets/scss/component/base-components/_base-choice-list.scss
+++ b/src/assets/scss/component/base-components/_base-choice-list.scss
@@ -6,10 +6,11 @@
   text-align: left;
   &__field-selected{
     padding: 1rem;
+    height: 44px;
     background-color: $color-white;
     box-shadow: $bd-box-shadow;
     font-size: $font-size-base;
-    line-height: 1rem;
+    line-height: 1.2rem;
     @include flexbox;
     @include align-items(flex-start);
     @include justify-content(center);
