--- a/src/assets/scss/component/base-components/_base-card.scss
+++ b/src/assets/scss/component/base-components/_base-card.scss
@@ -33,7 +33,7 @@ $toolbox-background: #E6E6E6;
 }
 
 .#{$base-card-name}__content {
-  padding: 15px;
+  padding: 1rem;
 }
 
 .#{$base-card-name}__link {
