--- a/src/assets/scss/component/base-components/_base-button-icon.scss
+++ b/src/assets/scss/component/base-components/_base-button-icon.scss
@@ -7,6 +7,7 @@ $search-btn-size: 44px;
   align-items: center;
   justify-content: center;
   background: $white;
+  box-shadow: $bd-box-shadow;
   margin-left: auto;
   cursor: pointer;
 
