--- a/src/assets/scss/component/dms/_dms.scss
+++ b/src/assets/scss/component/dms/_dms.scss
@@ -132,7 +132,6 @@ $width-lg-tree: 350px;
   .dms__tree-view{
     width: $width-tree;
     min-width: $width-tree;
-
     @include media-breakpoint-up(lg){
       width: $width-lg-tree;
       min-width: $width-lg-tree;
@@ -161,6 +160,7 @@ $width-lg-tree: 350px;
       vertical-align: middle;
       line-height: 1em;
       word-break: break-all;
+      @include font-size(13px);
       &:nth-child(even), &:nth-child(odd){
         background: none;
       }
