ajout menu tableau ifc et modifs css

--- a/src/assets/scss/_bootstrap-variable-override.scss
+++ b/src/assets/scss/_bootstrap-variable-override.scss
@@ -85,3 +85,5 @@ $badge-border-radius: 3px;
 $modal-inner-padding: 0;
 $modal-md: 507px;
 $modal-content-border-width: 0;
+$modal-backdrop-bg: $primary;
+$modal-backdrop-opacity: 0.81;
