--- a/src/assets/scss/pages/_project.scss
+++ b/src/assets/scss/pages/_project.scss
@@ -11,6 +11,26 @@
     }
   }
   .table-spaced {
+    .base-button-option {
+      &__tool {
+
+      }
+      &__menu {
+        ul li {
+          .svg-icon {
+            margin-right: 10px;
+          }
+          .base-valid-delete {
+            .svg-icon {
+              margin-right: 0;
+            }
+          }
+        }
+      }
+    }
+    .close-circle {
+      cursor: pointer;
+    }
     &__items--body--state, &__items--header--state {
       justify-content: center;
 
