alignement btn toolbar avec liste des cards

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -41,6 +41,7 @@
 @import "component/dms/dms";
 
 @import "pages/page-clouds";
+@import "pages/page-projects";
 @import "pages/project";
 @import "pages/signin-required";
 @import "pages/viewer";
