rename and replace icons

--- a/src/assets/scss/component/_users-list.scss
+++ b/src/assets/scss/component/_users-list.scss
@@ -162,7 +162,7 @@
         }
       }
     }
-    .account-plus{
+    .add-account{
       &.clicked{
         &:after{
           animation-name: circle;
