--- a/src/assets/scss/component/_users-list.scss
+++ b/src/assets/scss/component/_users-list.scss
@@ -71,16 +71,18 @@
         margin-left: 10px;
       }
     }
-    &__search, &__invitation{
+    &__search, &__invitation {
       width: 100%;
       @include flexbox;
       @include align-items(center);
 
-      input{
-        padding: 4px;
+      input {
+        padding: 6px 12px;
+        transition: all, ease 0.25s;
 
-        &:focus{
+        &:focus {
           outline: none;
+          border-color: $color-primary;
 
           &::placeholder {
             opacity: 0;
@@ -93,14 +95,14 @@
         margin-left: 18px;
         width: 100%;
         min-width: auto;
+        border: 1px solid $border-color;
       }
     }
     &__invitation {
       input {
-        padding: 7px 12px;
         width: calc(56% - 22px);
         min-width: auto;
-        border: 1px solid $gray3;
+        border: 1px solid $border-color;
 
         @include media-breakpoint-up(xl) {
           width: calc(60% - 11px);
@@ -112,7 +114,7 @@
         width: 24%;
         max-width: 125px;
         position: relative;
-        border: 1px solid $gray3;
+        border: 1px solid $border-color;
         color: $color-primary;
         cursor: pointer;
         
@@ -330,6 +332,8 @@
       border: 1px solid $border-color;
 
       &:focus {
+        border-color: $color-primary;
+        
         &::placeholder {
           opacity: 0;
         }
