modif btn submit creation cloud et project + gestion des noms longs cloud

--- a/src/assets/scss/_bootstrap-variable-override.scss
+++ b/src/assets/scss/_bootstrap-variable-override.scss
@@ -1,3 +1,6 @@
+//TODO a terme il faudra supprimer cet appel et toutes les surcharges de variables bootstrap
+@import "../../../node_modules/@bimdata/utils/scss/variables";
+
 $font-family-base: 'Roboto';
 $body-bg: #e8e8e8;
 $body-color: #94979A;
