ajout breakpoints positionnement search-container page cloud

--- a/src/assets/scss/component/_toolbar-page.scss
+++ b/src/assets/scss/component/_toolbar-page.scss
@@ -36,6 +36,9 @@
       position: absolute;
       right: 187px;
     }
+    @media (min-width: 2000px) {
+      right: 197px;
+    }
     .search-component{
       margin-left: auto;
     }
