gestion des noms longs preivew slider

--- a/src/assets/scss/pages/_project.scss
+++ b/src/assets/scss/pages/_project.scss
@@ -102,6 +102,9 @@
       @include align-items(center);
       &__title{
         width: 75%;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
     }
 
