--- a/src/assets/scss/component/base-components/_base-model-preview.scss
+++ b/src/assets/scss/component/base-components/_base-model-preview.scss
@@ -66,4 +66,15 @@
 }
 .model-preview-slider{
   position: relative;
+
+  .no-preview {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .svg-icon {
+      fill: $color-primary;
+    }
+  }
 }
