--- a/src/assets/scss/pages/_project.scss
+++ b/src/assets/scss/pages/_project.scss
@@ -60,6 +60,9 @@
       height: 338px;
       background: $bg-preview;
     }
+    .loader-layout {
+      margin-top: 0;
+    }
   }
   .user-project{
     width: 100%;
