size select droit invitation

--- a/src/assets/scss/component/_users-list.scss
+++ b/src/assets/scss/component/_users-list.scss
@@ -115,7 +115,6 @@
         padding: 6px;
         margin-left: 11px;
         width: 24%;
-        max-width: 125px;
         position: relative;
         border: 1px solid $border-color;
         color: $color-primary;
@@ -123,6 +122,10 @@
         
         @include flexbox;
         @include align-items(center);
+
+        @include media-breakpoint-up(xl) {
+          width: calc(40% - 11px);
+        }
 
         .arrow-down{
           position: absolute;
