ajou ombre container address + trad

--- a/src/assets/scss/pages/_project.scss
+++ b/src/assets/scss/pages/_project.scss
@@ -182,6 +182,7 @@
             padding: 16px 20px;
             display: flex;
             align-items: flex-end;
+            box-shadow: $box-shadow;
 
             .base-input-text-material {
               margin: 0;
