debug ouverture menu userList quand il ny a pas assez dutilisateur

--- a/src/assets/scss/component/_users-list.scss
+++ b/src/assets/scss/component/_users-list.scss
@@ -207,8 +207,7 @@
     @include flexbox;
     @include align-items(center);
 
-    &:last-child,
-    &:nth-last-child(2) {
+    &.open-top {
       .base-button-option__menu {
         top: -75px;
       }
