Ajout message success resend invitation

--- a/src/assets/scss/_transitions.scss
+++ b/src/assets/scss/_transitions.scss
@@ -15,3 +15,14 @@
   opacity: 0;
   @include transform(translateX(-30%));
 }
+
+.slide-bottom-fade-enter-active {
+  transition: all .3s ease;
+}
+.slide-bottom-fade-leave-active {
+  transition: all .3s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+}
+.slide-bottom-fade-enter, .slide-bottom-fade-leave-to {
+  transform: translateY(-10px);
+  opacity: 0;
+}
