--- a/src/assets/scss/layout/_header_user_menu.scss
+++ b/src/assets/scss/layout/_header_user_menu.scss
@@ -1,5 +1,6 @@
 .user-menu{
   height: 60px;
+  position: relative;
   @include flexbox;
   @include align-items(center);
   @include justify-content(flex-end);
@@ -27,53 +28,77 @@
     }
   }
   &__u{
-    &-info{
-      padding: 10px 8px;
-      @include flexbox;
-      @include align-items(center);
-      &--details{
-        padding-left: 15px;
-        width: 100%;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-      }
-    }
+    margin-left: 12px;
+    // &-info{
+    //   padding: 10px 8px;
+    //   @include flexbox;
+    //   @include align-items(center);
+    //   &--details{
+    //     padding-left: 15px;
+    //     width: 100%;
+    //     text-overflow: ellipsis;
+    //     white-space: nowrap;
+    //   }
+    // }
     &-fullname{
       margin-bottom: 0;
       color: $text-color;
       @include font-size(12px);
     }
     &-email{
-      margin-bottom: 9px;
       color: $gray4;
       @include font-size(10px);
     }
-  }
-  .dropdown-menu{
-    margin-top: 9px;
-    width: 200px;
-    background-color: $color-white;
-    border: none;
-    @include bm-box-shadow;
-    &:after{
-      margin-left: 1.1em;
+    &-picto{
+      height: 24px;
+      margin-left: 20px;
+      cursor: pointer;
     }
-    .dropdown-item{
+  }
+  .test{
+    width: -webkit-fill-available;
+    position: absolute;
+    top: 65px;
+    right: -10px;
+    background-color: $color-white;
+    box-shadow: 0 2px 10px 0 rgba($color-black,0.1);
+    z-index: 1;
+    &::before{
+      content: "";
+      position: absolute;
+      height: 15px;
+      width: 15px;
       background-color: $color-white;
-      outline: none;
+      right: 7%;
+      top: -10%;
+      transform: rotate(45deg);
+      box-shadow: 0 2px 10px 0 rgba($color-black,0.1);
+      z-index: -1;
+    }
+  }
+  &__d{
+    padding: 8px 0;
+    background-color: $color-white;
+  }
+  .profile-item, .logout-item{
+    padding: 7px 18px;
+    cursor: pointer;
+    color: $text-color;
+    background-color: $color-white;
+    outline: none;
+    @include font-size(10px);
+    span{
+      margin-right: 18px;
+    }
+    &:hover{
+      background-color: $color-background;
     }
   }
   .logout-item{
-    padding: 5px 0;
-    cursor: pointer;
-    color: $text-color;
-    outline: none;
-    text-align: center;
-    @include font-size(10px);
-  }
-  .dropdown-menu .btn{
-    width: 100%;
-    min-width: auto;
-    @include font-size(9px);
+   svg{
+     path:first-child{
+       fill: none;
+     }
+   } 
   }
 }
